include/codata_constants_2022.h

ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_ENERGY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_FORCE;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_LENGTH;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MAG_DIPOLE_MOM;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MAG_FLUX_DENSITY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MAGNETIZABILITY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MASS;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_MOMENTUM;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_PERMITTIVITY;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_TIME;
ADD_IMPORT extern const struct codata_constant_type ATOMIC_UNIT_OF_VELOCITY;
ADD_IMPORT extern const struct codata_constant_type AVOGADRO_CONSTANT;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON;
ADD_IMPORT extern const struct codata_constant_type BOHR_MAGNETON_IN_EV_T;