src/codata_constants_2022_capi.f90


type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL") ::&
capi_30 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "p", "o", "t", "e", "n", "t", &
"i", "a", "l", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL%value, &
ATOMIC_UNIT_OF_ELECTRIC_POTENTIAL%uncertainty, &
[ &
"V", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM") ::&
capi_31 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "l", "e", "c", "t", &
"r", "i", "c", " ", "q", "u", "a", "d", "r", "u", &
"p", "o", "l", "e", " ", "m", "o", "m", ".", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM%value, &
ATOMIC_UNIT_OF_ELECTRIC_QUADRUPOLE_MOM%uncertainty, &
[ &
"C", " ", "m", "^", "2", c_null_char, " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_ENERGY") ::&
capi_32 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "e", "n", "e", "r", "g", &
"y", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_ENERGY%value, &
ATOMIC_UNIT_OF_ENERGY%uncertainty, &
[ &
"J", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_FORCE") ::&
capi_33 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "f", "o", "r", "c", "e", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_FORCE%value, &
ATOMIC_UNIT_OF_FORCE%uncertainty, &
[ &
"N", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_LENGTH") ::&
capi_34 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "l", "e", "n", "g", "t", &
"h", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_LENGTH%value, &
ATOMIC_UNIT_OF_LENGTH%uncertainty, &
[ &
"m", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MAG_DIPOLE_MOM") ::&
capi_35 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "g", ".", " ", &
"d", "i", "p", "o", "l", "e", " ", "m", "o", "m", &
".", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MAG_DIPOLE_MOM%value, &
ATOMIC_UNIT_OF_MAG_DIPOLE_MOM%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MAG_FLUX_DENSITY") ::&
capi_36 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "g", ".", " ", &
"f", "l", "u", "x", " ", "d", "e", "n", "s", "i", &
"t", "y", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MAG_FLUX_DENSITY%value, &
ATOMIC_UNIT_OF_MAG_FLUX_DENSITY%uncertainty, &
[ &
"T", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MAGNETIZABILITY") ::&
capi_37 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "g", "n", "e", &
"t", "i", "z", "a", "b", "i", "l", "i", "t", "y", &
c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MAGNETIZABILITY%value, &
ATOMIC_UNIT_OF_MAGNETIZABILITY%uncertainty, &
[ &
"J", " ", "T", "^", "-", "2", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MASS") ::&
capi_38 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "a", "s", "s", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MASS%value, &
ATOMIC_UNIT_OF_MASS%uncertainty, &
[ &
"k", "g", c_null_char, " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_MOMENTUM") ::&
capi_39 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "m", "o", "m", "e", "n", &
"t", "u", "m", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_MOMENTUM%value, &
ATOMIC_UNIT_OF_MOMENTUM%uncertainty, &
[ &
"k", "g", " ", "m", " ", "s", "^", "-", "1", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_PERMITTIVITY") ::&
capi_40 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "p", "e", "r", "m", "i", &
"t", "t", "i", "v", "i", "t", "y", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_PERMITTIVITY%value, &
ATOMIC_UNIT_OF_PERMITTIVITY%uncertainty, &
[ &
"F", " ", "m", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_TIME") ::&
capi_41 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "t", "i", "m", "e", c_null_char, &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_TIME%value, &
ATOMIC_UNIT_OF_TIME%uncertainty, &
[ &
"s", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="ATOMIC_UNIT_OF_VELOCITY") ::&
capi_42 = capi_constant_type([ &
"a", "t", "o", "m", "i", "c", " ", "u", "n", "i", &
"t", " ", "o", "f", " ", "v", "e", "l", "o", "c", &
"i", "t", "y", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
ATOMIC_UNIT_OF_VELOCITY%value, &
ATOMIC_UNIT_OF_VELOCITY%uncertainty, &
[ &
"m", " ", "s", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="AVOGADRO_CONSTANT") ::&
capi_43 = capi_constant_type([ &
"A", "v", "o", "g", "a", "d", "r", "o", " ", "c", &
"o", "n", "s", "t", "a", "n", "t", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
AVOGADRO_CONSTANT%value, &
AVOGADRO_CONSTANT%uncertainty, &
[ &
"m", "o", "l", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON") ::&
capi_44 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", c_null_char, " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON%value, &
BOHR_MAGNETON%uncertainty, &
[ &
"J", " ", "T", "^", "-", "1", c_null_char, " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])

type(capi_constant_type), protected, public, bind(C, name="BOHR_MAGNETON_IN_EV_T") ::&
capi_45 = capi_constant_type([ &
"B", "o", "h", "r", " ", "m", "a", "g", "n", "e", &
"t", "o", "n", " ", "i", "n", " ", "e", "V", "/", &
"T", c_null_char, " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
], &
BOHR_MAGNETON_IN_EV_T%value, &
BOHR_MAGNETON_IN_EV_T%uncertainty, &
[ &
"e", "V", " ", "T", "^", "-", "1", c_null_char, " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", &
" ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " ", " " &
])
